# Chunky-V4

./: .gitignore  .pylintrc  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: mypy.yml
src/relic/chunky/v4/: definitions.py  serialization.py
src/relic/chunky/vX/: definitions.py  serialization.py
tests/: test_regressions.py
