[metadata]
name = relic-tool-chunky-v4
version = attr: relic.chunky.v4.__version__

author = Marcus Kertesz
; author_email = author@example.com
description = A library to read/write v4 Chunky files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MAK-Relic-Tool/Chunky-V4
project_urls =
    Bug Tracker = https://github.com/MAK-Relic-Tool/Issue-Tracker/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9


install_requires =
    mak-serialization-tools == 2022.0a19
    relic-tool-chunky-core ~= 1.1.0

[options.entry_points]
relic.chunky.handler =
    v4.1 = relic.chunky.v4.serialization:chunky_fs_serializer

[options.packages.find]
where = src